--- a/monitoring/grafana_config.yaml
+++ b/monitoring/grafana_config.yaml
@@ -15,8 +15,8 @@ resources:
     cpu: "0.1"
     memory: 128Mi
   limits:
-    cpu: "0.5"
-    memory: 512Mi
+    cpu: "3"
+    memory: 3Gi
 
 persistence:
   enabled: true
