--- a/monitoring/grafana_config.yaml
+++ b/monitoring/grafana_config.yaml
@@ -7,8 +7,8 @@ service:
   port: 80  # default
   nodePort: 30075
 
-#nodeSelector:
-#  base: worker
+nodeSelector:
+ base: worker
 
 resources:
   requests:
