--- a/monitoring/prometheus_config.yaml
+++ b/monitoring/prometheus_config.yaml
@@ -9,8 +9,8 @@ pushgateway:
   enabled: false
 
 server:
- nodeSelector:
-   base: worker
+ # nodeSelector:
+ #   base: worker
   service:
     type: NodePort
     nodePort: 30073
@@ -27,7 +27,7 @@ server:
     # has no effect when using nfs: this is a min limit not a max
     size: 96Gi
 #    existingClaim:
-  retention: 60d
+  retention: 30d
 
 #kubeStateMetrics:
 #  nodeSelector:
