--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n823.h2f07e0f
+   version: 0.2.0-n839.hf8a9d7a
    repository: https://jupyterhub.github.io/helm-chart
