Use maxUnavailable instead of minAvailable for binder pdb'

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -30,7 +30,7 @@ eventsArchiver:
 
 binderhub:
   pdb:
-    minAvailable: 1
+    maxUnavailable: 1
   replicas: 2
   config:
     GitHubRepoProvider:
