--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n848.h39a9e38
+   version: 0.2.0-n852.h7c39292
    repository: https://jupyterhub.github.io/helm-chart
