--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -62,7 +62,7 @@ binderhub:
       pod_quota: 20
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2021.08.0-24.g4da2e1e
+      build_image: quay.io/jupyterhub/repo2docker:2021.08.0-35.g00769c0
       build_node_selector:
         user: worker
         # userbinder: worker
