--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -52,7 +52,7 @@ persistent_binderhub:
           - ^(git|https?)%3A%2F%2Fcodeberg.org%2Fforgiagether%2F.*
 
       BinderHub:
-        build_image: quay.io/jupyterhub/repo2docker:2021.08.0-35.g00769c0
+        build_image: quay.io/jupyterhub/repo2docker:2021.08.0-45.g1146d4f
         build_node_selector:
           user: worker
         per_repo_quota: 100
