--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -223,6 +223,7 @@ binderhub:
           import os
           def get(self):
               path = self.request.path
+              self.log.info(path)
               if path == "/about/":
                   html = self.render_template("about.html", sync=True, **{"active": "about"})
                   self.finish(html)
