--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -168,6 +168,9 @@ deploy_prod:
       if $CHANGED_FILES | egrep 'takeout/config.yaml'; then
         mode+="-takeout"
       fi;
+      if $CHANGED_FILES | egrep 'load_balancer/static/'; then
+        mode+="-static"
+      fi;
       echo "####### mode: $mode"
       fab -H $K8S_MASTER_NODE_IP deploy -u iuser -p $K8S_MASTER_NODE_PASSWORD -r $CI_COMMIT_SHA -m $mode
   only:
