fix links to faq/terms/about pages

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -99,16 +99,15 @@ binderhub:
       template_vars = {
           "version": "beta",
           "home_url": "/",
-          "gesishub_url": "/hub/",
           "gesisbinder_url": "/binder/",
-          "about_url": "/about/",
-          "tou_url": "/terms_of_use/",
+          "about_url": "/about.html",
+          "tou_url": "/terms.html",
           "imprint_url": "https://www.gesis.org/en/institute/imprint/",
           "data_protection_url": "https://www.gesis.org/en/institute/data-protection/",
           "gesis_url": "https://www.gesis.org/en/home/",
           "status_url": "https://gesisnotebooks.betteruptime.com",
           "gallery_url": "/gallery/",
-          "faq_url": "/faq/",
+          "faq_url": "/faq.html",
           "active": "binder",
           "static_nginx": "/static/",
           "static_version": uuid.uuid4().hex,
