revert node selectors promotheus and grafana

--- a/monitoring/prometheus_config.yaml
+++ b/monitoring/prometheus_config.yaml
@@ -10,8 +10,8 @@ pushgateway:
   enabled: false
 
 server:
-  nodeSelector:
-    base: worker
+  # nodeSelector:
+  #  base: worker
   service:
     type: NodePort
     nodePort: 30073
