--- a/monitoring/grafana_config.yaml
+++ b/monitoring/grafana_config.yaml
@@ -6,8 +6,8 @@ service:
   type: NodePort
   port: 80  # default
   nodePort: 30075
-  nodeSelector:
-    base: worker
+    #nodeSelector:
+    #base: worker
 
 resources:
   requests:
