--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n861.h013c491
+   version: 0.2.0-n862.h9fa2747
    repository: https://jupyterhub.github.io/helm-chart
