--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n864.hf7c9615
+   version: 0.2.0-n866.h4e75de4
    repository: https://jupyterhub.github.io/helm-chart
