--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -63,7 +63,7 @@ binderhub:
       pod_quota: 120
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2021.08.0-86.gbf99b93
+      build_image: quay.io/jupyterhub/repo2docker:2021.08.0-91.g813d28b
       build_node_selector:
         user: worker
         # userbinder: worker
