repo2docker: https://github.com/jupyterhub/repo2docker/compare/7f89926...47ea95a

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -63,7 +63,7 @@ binderhub:
       pod_quota: 120
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2021.08.0-127.g7f89926
+      build_image: quay.io/jupyterhub/repo2docker:2021.08.0-136.g47ea95a
       build_node_selector:
         user: worker
         # userbinder: worker
