--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -55,6 +55,11 @@ binderhub:
       #  - pattern: ^gesiscss/.*
       #    config:
       #      quota: 200
+    GitLabRepoProvider:
+      banned_specs:
+        - ^h4j3s1978%2F.*
+        - ^jasmt507%2F.*
+        - .*%2Fabooz.*
     GitRepoProvider:
       banned_specs:
         - ^https%3A%2F%2Fbitbucket.org%2Fnikiubel%2Fnikiubel.bitbucket.io.git/.*
@@ -62,6 +67,9 @@ binderhub:
         - ^(git|https?)%3A%2F%2Fnotabug.org%2FulslcuRux3Y%2F.*
         - ^https%3A%2F%2Fframagit.org%2FCecGhesq%2Flic_mdf_nsi_1.*
         - ^(git|https?)%3A%2F%2Fcodeberg.org%2Fforgiagether%2F.*
+        - ^(git|https?)%3A%2F%2Fgitlab.com%2Fh4j3s1978%2F.*
+        - ^(git|https?)%3A%2F%2Fgitlab.com%2Fjasmt507%2F.*
+        - ^(git|https?)%3A%2F%2Fnotabug.org%2FulslcuRux3Y%2F.*
     BinderHub:
       pod_quota: 120
       base_url: /binder/
