--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -63,6 +63,7 @@ binderhub:
         - ^bander677y.*
         - ^nora3456nm.*
         - ^sfdfs454dfd.*
+        - ^sami8978er.*
 
     GitRepoProvider:
       banned_specs:
@@ -77,6 +78,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fsfdfs454dfd%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fbander677y%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fnora3456nm%2F.*
+        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fsami8978er%2F.*
 
     BinderHub:
       pod_quota: 120
