--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -65,6 +65,7 @@ binderhub:
         - ^sfdfs454dfd.*
         - ^sami8978er.*
         - ^moneer43fdr.*
+        - ^youarenote.*
 
     GitRepoProvider:
       banned_specs:
@@ -81,6 +82,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fnora3456nm%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fsami8978er%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fmoneer43fdr%2F.*
+        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fyouarenote%2F.*
 
     BinderHub:
       pod_quota: 120
