--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -67,6 +67,7 @@ binderhub:
         - ^moneer43fdr.*
         - ^youarenote.*
         - ^b4493.*
+        - ^china234.*
 
     GitRepoProvider:
       banned_specs:
@@ -85,6 +86,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fmoneer43fdr%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fyouarenote%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fb4493%2F.*
+        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina234%2F.*
 
     BinderHub:
       pod_quota: 120
