--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -68,6 +68,7 @@ binderhub:
         - ^youarenote.*
         - ^b4493.*
         - ^china234.*
+        - ^imhajes2.*
 
     GitRepoProvider:
       banned_specs:
@@ -87,6 +88,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fyouarenote%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fb4493%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina234%2F.*
+        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fimhajes2%2F.*
 
     BinderHub:
       pod_quota: 120
