--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -69,6 +69,7 @@ binderhub:
         - ^b4493.*
         - ^china234.*
         - ^imhajes2.*
+        - ^china654.*
 
     GitRepoProvider:
       banned_specs:
@@ -89,6 +90,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fb4493%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina234%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fimhajes2%2F.*
+        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina654%2F.*
 
     BinderHub:
       pod_quota: 120
