--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n868.h48bc0f6
+   version: 0.2.0-n878.h8da69f2
    repository: https://jupyterhub.github.io/helm-chart
