--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -70,6 +70,7 @@ binderhub:
         - ^china234.*
         - ^imhajes2.*
         - ^china654.*
+        - ^n3424.*
 
     GitRepoProvider:
       banned_specs:
@@ -91,6 +92,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina234%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fimhajes2%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina654%2F.*
+        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fn3424%2F.*
 
     BinderHub:
       pod_quota: 120
