--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -71,6 +71,7 @@ binderhub:
         - ^imhajes2.*
         - ^china654.*
         - ^n3424.*
+        - ^binero1.*
 
     GitRepoProvider:
       banned_specs:
@@ -93,6 +94,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fimhajes2%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina654%2F.*
         - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fn3424%2F.*
+        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fbinero1%2F.*
 
     BinderHub:
       pod_quota: 120
