--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -51,6 +51,7 @@ binderhub:
         - ^GuitarsAI/.*
         - ^keva2/.*
         - ^whoism3er/.*
+        - ^looky23c/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
