--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -111,8 +111,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fwhoism3er%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Flooky23c%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fkeva2%2F.*
-        - ^(git|https?)s%3A%2F%2Fbitbucket.org%2F.*
-
+        - ^(git|https?)s%3A%2F%2F.*bitbucket.org%2F.*
 
     BinderHub:
       pod_quota: 120
