--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -113,6 +113,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Flooky23c%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fkeva2%2F.*
         - ^(git|https?)s%3A%2F%2F.*bitbucket.org%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjupyterhuk%2F.*
 
     BinderHub:
       pod_quota: 120
