--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -55,6 +55,7 @@ binderhub:
         - ^h4j3s/.*
         - ^mobrig/.*
         - ^jupyterhuk/.*
+        - ^joy56gh/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -114,6 +115,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fkeva2%2F.*
         - ^(git|https?)s%3A%2F%2F.*bitbucket.org%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjupyterhuk%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjoy56gh%2F.*
 
     BinderHub:
       pod_quota: 120
