--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -57,6 +57,7 @@ binderhub:
         - ^jupyterhuk/.*
         - ^joy56gh/.*
         - ^aboali2s/.*
+        - ^fahadahmd245/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -118,6 +119,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjupyterhuk%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjoy56gh%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Faboali2s%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffahadahmd245%2F.*
 
     BinderHub:
       pod_quota: 120
