--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -58,6 +58,7 @@ binderhub:
         - ^joy56gh/.*
         - ^aboali2s/.*
         - ^fahadahmd245/.*
+        - ^w3c4nd0it/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -120,6 +121,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjoy56gh%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Faboali2s%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffahadahmd245%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffw3c4nd0it%2F.*
 
     BinderHub:
       pod_quota: 120
