--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -59,6 +59,7 @@ binderhub:
         - ^aboali2s/.*
         - ^fahadahmd245/.*
         - ^w3c4nd0it/.*
+        - ^jupyter-n0te/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -122,6 +123,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Faboali2s%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffahadahmd245%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffw3c4nd0it%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjupyter-n0te%2F.*
 
     BinderHub:
       pod_quota: 120
