--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -61,6 +61,7 @@ binderhub:
         - ^w3c4nd0it/.*
         - ^jupyter-n0te/.*
         - ^foundmeplz/.*
+        - ^ineedsomeone/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -126,6 +127,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffw3c4nd0it%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjupyter-n0te%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffoundmeplz%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fineedsomeone%2F.*
 
     BinderHub:
       pod_quota: 120
