--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -62,6 +62,7 @@ binderhub:
         - ^jupyter-n0te/.*
         - ^foundmeplz/.*
         - ^ineedsomeone/.*
+        - ^ghool43/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -128,6 +129,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjupyter-n0te%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffoundmeplz%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fineedsomeone%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fghool43%2F.*
 
     BinderHub:
       pod_quota: 120
