--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -64,6 +64,7 @@ binderhub:
         - ^ineedsomeone/.*
         - ^ghool43/.*
         - ^reaok45/.*
+        - ^user43er/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -132,6 +133,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fineedsomeone%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fghool43%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Freaok45%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fuser43er%2F.*
 
     BinderHub:
       pod_quota: 120
