--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -66,6 +66,7 @@ binderhub:
         - ^reaok45/.*
         - ^user43er/.*
         - ^hy45er/.*
+        - ^balag456/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -136,6 +137,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Freaok45%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fuser43er%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fhy45er%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fbalag456%2F.*
 
     BinderHub:
       pod_quota: 120
