--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -67,6 +67,7 @@ binderhub:
         - ^user43er/.*
         - ^hy45er/.*
         - ^balag456/.*
+        - ^jhiu87yu/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -138,6 +139,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fuser43er%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fhy45er%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fbalag456%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjhiu87yu%2F.*
 
     BinderHub:
       pod_quota: 120
