--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -69,6 +69,7 @@ binderhub:
         - ^balag456/.*
         - ^jhiu87yu/.*
         - ^yalla4er/.*
+        - ^underface87/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -142,6 +143,7 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fbalag456%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjhiu87yu%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fyalla4er%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Funderface87%2F.*
 
     BinderHub:
       pod_quota: 120
