--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n960.h47d7917
+   version: 0.2.0-n961.h20697c6
    repository: https://jupyterhub.github.io/helm-chart
