--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -71,6 +71,11 @@ binderhub:
         - ^yalla4er/.*
         - ^underface87/.*
         - ^a2nk/.*
+        - ^wijayajuspinki/.*
+        - ^Rethno168/.*
+        - ^falberanda/.*
+        - ^Garith923/.*
+
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
@@ -143,7 +148,10 @@ binderhub:
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjhiu87yu%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Fyalla4er%2F.*
         - ^(git|https?)s%3A%2F%2Fgithub.com%2Funderface87%2F.*
-        - ^(git|https?)%3A%2F%2Fgithub.com%2Fa2nk%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2FGarith923%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffalberanda%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2FRethno168%2F.*
+        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fwijayajuspinki%2F.*
 
     BinderHub:
       pod_quota: 120
