--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -165,7 +165,7 @@ binderhub:
       pod_quota: 120
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2022.02.0-32.ge7524a7
+      build_image: quay.io/jupyterhub/repo2docker:2022.02.0-58.gae8ed29
       build_node_selector:
         user: worker
         # userbinder: worker
