--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -52,7 +52,7 @@ persistent_binderhub:
           - ^(git|https?)%3A%2F%2Fcodeberg.org%2Fforgiagether%2F.*
 
       BinderHub:
-        build_image: quay.io/jupyterhub/repo2docker:2022.02.0-58.gae8ed29
+        build_image: quay.io/jupyterhub/repo2docker:2022.02.0-60.g5b688f4
         build_node_selector:
           user: worker
         per_repo_quota: 100
