--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -175,7 +175,7 @@ binderhub:
       pod_quota: 120
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2022.02.0-62.g484b29b
+      build_image: quay.io/jupyterhub/repo2docker:2022.02.0-75.gd415115
       build_node_selector:
         user: worker
         # userbinder: worker
