--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n978.h2eb8b07
+   version: 0.2.0-n988.h72e1852
    repository: https://jupyterhub.github.io/helm-chart
