--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -38,10 +38,8 @@ binderhub:
       # They should be strings that will match "^<org-name>/<repo-name>.*"
       banned_specs:
         # e.g. '^org/repo.*'
+        - ^a2nk/.*
         - ^imhajes/.*
-        - .*/jasmt.*
-        - .*/abooz.*
-        - ^gesiscss/gesis_dataday_20.*
         - ^ines/spacy-binder.*
         - ^soft4voip/rak.*
         - ^hmharshit/cn-ait.*
@@ -49,42 +47,9 @@ binderhub:
         - ^hmharshit/mltraining.*
         - ^FDesnoyer/MathExp.*
         - ^GuitarsAI/.*
-        - ^keva2/.*
-        - ^whoism3er/.*
-        - ^looky23c/.*
-        - ^h4j3s/.*
-        - ^mobrig/.*
-        - ^jupyterhuk/.*
-        - ^joy56gh/.*
-        - ^aboali2s/.*
-        - ^fahadahmd245/.*
-        - ^w3c4nd0it/.*
-        - ^jupyter-n0te/.*
-        - ^foundmeplz/.*
-        - ^ineedsomeone/.*
-        - ^ghool43/.*
-        - ^reaok45/.*
-        - ^user43er/.*
-        - ^hy45er/.*
-        - ^balag456/.*
-        - ^jhiu87yu/.*
-        - ^yalla4er/.*
-        - ^underface87/.*
-        - ^a2nk/.*
-        - ^wijayajuspinki/.*
-        - ^Rethno168/.*
-        - ^falberanda/.*
-        - ^Garith923/.*
-        - ^hlukiniko/.*
-        - ^tgpasarireetucing/.*
-        - ^Rhosta428/.*
-        - ^maximussale1/.*
-        - ^Intan90002/.*
-        - ^kamilairsyat08/.*
-        - ^arnienindin/.*
-        - ^sahrulega56/.*
-        - ^andriyanaade281/.*
-        - ^ayman107.*
+        # ferarussia is clearly a fake GitHub account created by GuitarsAI to get around ban
+        # it was created the day GuitarsAI was blocked and does the same thing
+        - ^ferarussia/.*
 
       high_quota_specs:
         - ^gesiscss/.*
@@ -97,81 +62,17 @@ binderhub:
         - ^h4j3s1978%2F.*
         - ^jasmt507%2F.*
         - .*%2Fabooz.*
-        - ^bander677y.*
-        - ^nora3456nm.*
-        - ^sfdfs454dfd.*
-        - ^sami8978er.*
-        - ^moneer43fdr.*
-        - ^youarenote.*
-        - ^b4493.*
-        - ^china234.*
-        - ^imhajes2.*
-        - ^china654.*
-        - ^n3424.*
-        - ^binero1.*
-        - ^jupyrt56.*
-        - ^niceok1978.*
 
     GitRepoProvider:
       banned_specs:
+        - ^(git|https?)%3A%2F%2Fgithub.com%2Fa2nk%2F.*
         - ^https%3A%2F%2Fbitbucket.org%2Fnikiubel%2Fnikiubel.bitbucket.io.git/.*
         - ^https%3A%2F%2Fjovian.ml%2Fapi%2Fgit%2F.*
-        - ^(git|https?)%3A%2F%2Fnotabug.org%2FulslcuRux3Y%2F.*
         - ^https%3A%2F%2Fframagit.org%2FCecGhesq%2Flic_mdf_nsi_1.*
-        - ^(git|https?)%3A%2F%2Fcodeberg.org%2Fforgiagether%2F.*
-        - ^(git|https?)%3A%2F%2Fgitlab.com%2Fh4j3s1978%2F.*
-        - ^(git|https?)%3A%2F%2Fgitlab.com%2Fjasmt507%2F.*
         - ^(git|https?)%3A%2F%2Fnotabug.org%2FulslcuRux3Y%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fsfdfs454dfd%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fbander677y%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fnora3456nm%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fsami8978er%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fmoneer43fdr%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fyouarenote%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fb4493%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina234%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fimhajes2%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fchina654%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fn3424%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fbinero1%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fjupyrt56%2F.*
-        - ^(git|https?)s%3A%2F%2Fgitlab.com%2Fniceok1978%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fmobrig%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fh4j3s%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fwhoism3er%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Flooky23c%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fkeva2%2F.*
-        - ^(git|https?)s%3A%2F%2F.*bitbucket.org%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjupyterhuk%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjoy56gh%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Faboali2s%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffahadahmd245%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffw3c4nd0it%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjupyter-n0te%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffoundmeplz%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fineedsomeone%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fghool43%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Freaok45%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fuser43er%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fhy45er%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fbalag456%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fjhiu87yu%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fyalla4er%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Funderface87%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2FGarith923%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Ffalberanda%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2FRethno168%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fwijayajuspinki%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fhlukiniko%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Ftgpasarireetucing%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2FRhosta428%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fmaximussale1%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2FIntan90002%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fkamilairsyat08%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Farnienindin%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fsahrulega56%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fandriyanaade281%2F.*
-        - ^(git|https?)s%3A%2F%2Fgithub.com%2Fayman107%2F.*
+        - ^(git|https?)%3A%2F%2Fgitlab.com%2Fjasmt507%2F.*
+        - ^(git|https?)%3A%2F%2Fgitlab.com%2Fh4j3s1978%2F.*
+        - .*%2Fabooz.*
 
     BinderHub:
       pod_quota: 120
