--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -78,7 +78,7 @@ binderhub:
       pod_quota: 120
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2022.02.0-75.gd415115
+      build_image: quay.io/jupyterhub/repo2docker:2022.02.0-88.g7580a30
       build_node_selector:
         user: worker
         # userbinder: worker
