--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n988.h72e1852
+   version: 0.2.0-0.dev.git.2782.h3ccfc44
    repository: https://jupyterhub.github.io/helm-chart
