--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 1.0.0-0.dev.git.2816.h5db2f98
+   version: 1.0.0-0.dev.git.2825.haf97bce
    repository: https://jupyterhub.github.io/helm-chart
