--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -78,7 +78,7 @@ binderhub:
       pod_quota: 120
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2022.10.0-2.g68a0331
+      build_image: quay.io/jupyterhub/repo2docker:2022.10.0-62.g9be3ac6
       build_node_selector:
         user: worker
         # userbinder: worker
