--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 1.0.0-0.dev.git.2863.hb7ad979
+   version: 1.0.0-0.dev.git.2866.hed86f2e
    repository: https://jupyterhub.github.io/helm-chart
